add fansybox for img

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             <h2 class="section_title">Выберите свою любимую пиццу</h2>
             <div class="products">
                 <div class="product_cart">
-                    <img src="./img/layer_2_508.png" alt="Мясная Делюкс">
+                    <a data-fancybox data-src="./img/layer_2_508.png">
+                        <img src="./img/layer_2_508.png" alt="Мясная Делюкс">
+                    </a>
                     <div class="text_block">
                         <p class="title">Мясная Делюкс</p>
                         <p class="description">Пепперони, лук, бекон, томатная паста, колбаски, перец, грибы, соус чили,
@@ -83,7 +85,9 @@
                     <button class="to_shop_card">В корзину</button>
                 </div>
                 <div class="product_cart">
-                    <img src="./img/layer_3_579.png" alt="Морская Премиум">
+                    <a data-fancybox data-src="./img/layer_3_579.png">
+                        <img src="./img/layer_3_579.png" alt="Морская Премиум">
+                    </a>
                     <div class="text_block">
                         <p class="title">Морская Премиум</p>
                         <p class="description">Перец, сыр, креветки, кальмары, мидии, лосось</p>
@@ -91,7 +95,9 @@
                     <button class="to_shop_card">В корзину</button>
                 </div>
                 <div class="product_cart">
-                    <img src="./img/layer_4_580.png" alt="Бекон и Сосиски">
+                    <a data-fancybox data-src="./img/layer_4_580.png">
+                        <img src="./img/layer_4_580.png" alt="Бекон и Сосиски">
+                    </a>
                     <div class="text_block">
                         <p class="title">Бекон и Сосиски</p>
                         <p class="description">Бекон, сыр, сосиски, ананас, томатная паста</p>
@@ -99,7 +105,9 @@
                     <button class="to_shop_card">В корзину</button>
                 </div>
                 <div class="product_cart">
-                    <img src="./img/layer_5_581.png" alt="Куриная Делюкс">
+                    <a data-fancybox data-src="./img/layer_5_581.png">
+                        <img src="./img/layer_5_581.png" alt="Куриная Делюкс">
+                    </a>
                     <div class="text_block">
                         <p class="title">Куриная Делюкс</p>
                         <p class="description">Курица, ананас, сыр Пепперони, соус для пиццы, томатная паста</p>
@@ -107,7 +115,9 @@
                     <button class="to_shop_card">В корзину</button>
                 </div>
                 <div class="product_cart">
-                    <img src="./img/layer_6_582.png" alt="Барбекю Премиум">
+                    <a data-fancybox data-src="./img/layer_6_582.png">
+                        <img src="./img/layer_6_582.png" alt="Барбекю Премиум">
+                    </a>
                     <div class="text_block">
                         <p class="title">Барбекю Премиум</p>
                         <p class="description">Свинина BBQ, соус Барбкею, сыр, курица, соус для пиццы, соус чили</p>
@@ -115,7 +125,9 @@
                     <button class="to_shop_card">В корзину</button>
                 </div>
                 <div class="product_cart">
-                    <img src="./img/layer_7_583.png" alt="Пепперони Дабл">
+                    <a data-fancybox data-src="./img/layer_7_583.png">
+                        <img src="./img/layer_7_583.png" alt="Пепперони Дабл">
+                    </a>
                     <div class="text_block">
                         <p class="title">Пепперони Дабл</p>
                         <p class="description">Пепперони, сыр, колбаса 2 видов: обжаренная и вареная</p>
@@ -123,7 +135,9 @@
                     <button class="to_shop_card">В корзину</button>
                 </div>
                 <div class="product_cart">
-                    <img src="./img/layer_8_584.png" alt="Куриное трио">
+                    <a data-fancybox data-src="./img/layer_8_584.png">
+                        <img src="./img/layer_8_584.png" alt="Куриное трио">
+                    </a>
                     <div class="text_block">
                         <p class="title">Куриное трио</p>
                         <p class="description">Жареная курица, Тушеная курица, Куриные наггетсы, перец, сыр, грибы, соус
